--- a/css/style.css
+++ b/css/style.css
@@ -78,13 +78,13 @@ body{
 }
 .tab{
     margin-top: 2vh;
-    height: 60vh;
+    height: 35vh;
     overflow-y: scroll; 
 }
 table{
-    width: 28vw;
+    width:  25vw;
     height: 10%;
-    margin-left: 0.25vw;    
+    margin: 0 auto;  
     color: black;
     background-color: white;
 }
