--- a/css/style.css
+++ b/css/style.css
@@ -77,9 +77,11 @@ body{
     font-weight: 800;
 }
 .tab{
-    margin-top: 2vh;
-    height: 35vh;
+    height: 30vh;
     overflow-y: scroll; 
+}
+.gr{
+    padding-top: 2vh;
 }
 table{
     width:  25vw;
@@ -98,10 +100,10 @@ thead th{
     font-weight: bold;
 }
 th.number{
-    width: 19vw;
+    width: 17vw;
 } 
 th.type{
-    width: 9vw;     
+    width: 7vw;     
 }
 thead{ 
     position: sticky;
@@ -121,7 +123,12 @@ tr:nth-child(even) {
     background-color: rgb(65, 64, 64); 
     color: white;
 }
-
+.con{
+    box-shadow: 0 0 2vw black;
+    height: 64vh;
+    width: 28vw;
+    margin  : 0 auto;
+}
 tr:nth-child(odd) {
     /* background: #16a085; */
 }
@@ -151,7 +158,8 @@ tr:nth-child(odd) {
     text-justify: center;
     font-size: 1.7vw;
     color:white;
-    font-weight: 300;
+    font-weight: 500;
+    height: 2vw;
 }
 .map{
     display: flex;
@@ -174,4 +182,29 @@ iframe{
 }
 .tab::-webkit-scrollbar{
     display: none;
+}
+h4{
+    margin: 0 auto;
+    text-align: center;
+    margin: 0 auto;
+}
+.list span{
+    display: inline-block;
+    position: relative;
+    background: #000000;
+    color:white;
+    font-weight: bold;
+    height: 4vh;
+    padding-top: 1vh;
+    font-size: 1.2vw;
+}
+span.num{
+    width: 18vw;
+    text-align: center;
+    vertical-align:middle;
+} 
+span.typ{
+    width: 7vw;     
+    text-align: center;
+    vertical-align:middle;
 }
