--- a/css/style.css
+++ b/css/style.css
@@ -1,42 +1,68 @@
+:root {
+    --blue: #09135c;
+    --white: #ffffff;
+  }
+
 body{
-    background-color: rgb(66, 63, 63); 
+    background-color: var(--white); 
     margin: 0;
 }
 .nav-bar{
-    background-color: rgb(32, 29, 29);
+    background-color: var(--blue);
     height: 15vh;
     width: 100vw;
 }
 .nav-bar img{
     height: 100%;
-    width: 20vw;    
+    width: 18vw;    
     margin-left: 40vw;
 }
+.team{
+    position: absolute;
+    height:15vh;
+    float: left;
+    width: 12vw;
+    color: white;
+    font-size: 1.2vw;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    flex-direction: column;
+}
+
+.team span{
+    display: block;
+    margin: atuo;
+}
+
 .content-1{
+    padding-top: 2vh;    
     height: 80vh;
     width: 100vw;;
     display: flex;
     align-items: center;
     justify-items: center;
-    background-color:rgb(56, 52, 52);
+    background-color:var(--white);
+    box-shadow: 0 0 4vh var(--blue);
+    z-index: 2;
+    position: relative;
 }
 
 .list{
     height: 100%;
     width: 30%;
-    background-color: gray;
+    background-color: var(--white);
 }
 .pic{
     height: 100%;
     width: 30%;
-    background-color: gray;
+    background-color: var(--white);
 }
+
 .veh-details{
-    height: 80vh;
+    height: 100%;
     width: 40%;
-    background-color: gray;
-    /* box-shadow: 0 0 5vw black;
-    z-index: 30; */
+    background-color: var(--white);
 }
 .tit{
     display: flex;
@@ -45,17 +71,23 @@ body{
     align-items: center;
     justify-content: center;
     font-size: 1.5vw;
-    width: 40%;
+    width: 14vw;
     height: 5vh;
     margin: 0 auto;
-    color: rgb(228, 225, 225);
-    background-color: rgb(145, 47, 47);
-    margin-top:3vh;
-    margin-bottom: 3vh;
-    font-weight: 200;    
+    color: var(--blue);
+    font-weight: 800;    
+    margin-bottom: 2vh;
 }
+.yt{
+    height: 5vh;
+    width: 4vw;
+}
+
 .plate-details{
-    background-color: rgb(44, 41, 41);
+    background-color: var(--blue);
+    border-top-left-radius: 4vh;
+    border-top-right-radius: 4vh;
+    margin-top: 7vh;
 }
 
 .plate-details h2{
@@ -69,9 +101,23 @@ body{
     font-weight: 200;
 }
 #vehicle-snap{
-    height: 50vh;
+    height: 45vh;
     width: 40vw;
 }
+.veh-details > h3{
+    text-align: center;    
+    margin: 0;
+    padding:0;
+    color: var(--white);
+    background-color: var(--blue);    
+    font-weight: 300;
+    height: 4vh;
+    font-size: 1.4vw;
+    border-bottom-left-radius: 1.3vw;
+    border-bottom-right-radius: 1.3vw;
+    margin-top: 2vh;
+}
+
 #plate-no{
     font-size: 1.6vw;
     font-weight: 800;
@@ -80,9 +126,7 @@ body{
     height: 30vh;
     overflow-y: scroll; 
 }
-.gr{
-    padding-top: 2vh;
-}
+
 table{
     width:  25vw;
     height: 10%;
@@ -94,20 +138,6 @@ table{
     border-collapse: collapse;
     border-spacing: 0;
 }
-thead th{    
-    background: #000000;
-    color:white;
-    font-weight: bold;
-}
-th.number{
-    width: 17vw;
-} 
-th.type{
-    width: 7vw;     
-}
-thead{ 
-    position: sticky;
-}
 
 table td{
     text-align: center;
@@ -116,21 +146,34 @@ table td{
 tr{
     height: 4vh;
     font-size: 1.2vw;
+    border-left: black solid 1px;
+    border-right: black solid 1px;
+}
+tr td:first-child{
+    width: 15vw;
+    font-size: 1.15vw;
+}
+
+tr td:last-child{
+    width: 10vw;
+    font-size: 1vw;
 }
 
 tr:nth-child(even) {
-    /* background: #2c3e50; */
-    background-color: rgb(65, 64, 64); 
+    background-color: var(--blue);
     color: white;
 }
 .con{
-    box-shadow: 0 0 2vw black;
-    height: 64vh;
+    box-shadow: 0 0 2vw var(--blue);
+    height: 65vh;
     width: 28vw;
+    position: relative;
     margin  : 0 auto;
+    margin-top: 7vh;
+    border-radius: 1.5vw;
 }
-tr:nth-child(odd) {
-    /* background: #16a085; */
+.info{
+    margin-top: 5vh;
 }
 
 .info, .info td, .info tr{
@@ -143,43 +186,48 @@ tr:nth-child(odd) {
     font-size: 1.6 vw;
     font-weight: 800;
     text-align: left;
-    color: rgb(65, 64, 64); 
+    color: rgb(250, 28, 28);
 }
 
 .info td:last-child{
     font-size: 1.4vw;
-    font-weight: 600;
-    background-color: white;
-    color: black;
+    font-weight: 500;
+    background-color: var(--blue);
+    color: var(--white);
     text-align: center;
 }
 .rep{
     text-align: center;
     text-justify: center;
-    font-size: 1.7vw;
-    color:white;
+    font-size: 2vw;
+    color:var(--blue);
     font-weight: 500;
     height: 2vw;
+    padding-top: 3vh;        
 }
 .map{
-    display: flex;
-    justify-content: space-around;
-    padding-top: 2vh;
+    display: block;
+    margin: 0 auto;
+    margin-top: 2vh;
+    justify-content: space-around;    
+    width: 25vw;
+    background-color: var(--blue);
+    border-bottom-left-radius: 1.3vw;
+    border-bottom-right-radius: 1.3vw;
+}
+.map h3{
+    text-align: center;
+    margin: 0;
+    padding:0;
+    color: white;
+    font-weight: 300;
+    font-size: 1.4vw;
 }
 iframe{        
     width: 25vw;
-    height: 25vh;
+    height: 24.5vh;
 }
-.team{
-    position: absolute;
-    height:15vh;
-    float: left;
-    width: 12vw;
-    color: white;
-    font-size: 1.2vw;
-    margin-left: 2vw;
-    margin-top: 1vh;
-}
+
 .tab::-webkit-scrollbar{
     display: none;
 }
@@ -187,11 +235,12 @@ h4{
     margin: 0 auto;
     text-align: center;
     margin: 0 auto;
+    margin-top: 7vh;
 }
 .list span{
     display: inline-block;
     position: relative;
-    background: #000000;
+    background: #292626;
     color:white;
     font-weight: bold;
     height: 4vh;
@@ -199,15 +248,22 @@ h4{
     font-size: 1.2vw;
 }
 span.num{
-    width: 18vw;
+    width: 15vw;
+    font-size: 1.3vw;
     text-align: center;
     vertical-align:middle;
+    font-weight: 300;
+    border-top-left-radius: 1.3vw;
 } 
 span.typ{
-    width: 7vw;     
+    width: 10vw;   
+    font-size: 1.3vw;
+    font-weight: 300;  
     text-align: center;
     vertical-align:middle;
+    border-top-right-radius: 1.3vw;
 }
-.rep1{
-    margin-bottom: 0.2vh;
+.selected{
+    background-color: #FF0000;  
+    color: white;
 }
